ingress/dashboard-ingress.yaml
# k8 ingress
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec: 
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
#tls:
#- hosts:
#  - dashboard.com
#  secretName: myapp-secret-tls  ( name in "Secret" & in the same namespace )
#  in secret -> tls.crt: base64 encoded cert
#               tls.key: base64 encoded key
# same host "dashboard.com" mutiple paths -> path: analytics ->  ashboard.com/analytics & analytics-service
# multiple host, sub-domains "analytics.dashboard.com"
